# sized-vec

./: CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
.github/: dependabot.yml
src/: lib.rs
