[package]
name = "sized-vec"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Type level sized vectors"
repository = "https://github.com/bodil/sized-vec"
documentation = "https://docs.rs/sized-vec"
readme = "README.md"
categories = ["data-structures"]
keywords = ["typelevel"]

[badges]
travis-ci = { repository = "bodil/sized-vec" }

[dependencies]
typenum = "1.10"
serde = { version = "1.0", optional = true }
proptest = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = "0.5"
serde = "1.0"
serde_json = "1.0"
proptest = "0.8"
